css/index.style.css
/* ... */
.dropShadow{
    filter: drop-shadow(4px 4px 2px rgb(53,53,53));
}

html, body {
    /* overflow: hidden; */
    font-family: 'Roboto', sans-serif;
    font-weight: 100;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

/* Base Container Class */
.Base-Container{
    /* 
    Row 1 - Landing Page
    Row 2 - Profile
    Row 3 - Projects
    */
    /* position: relative; */
    display: grid;
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    grid-template-columns: 100%;
    grid-template-rows: repeat(autofill, .5fr);
    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
    /* background-color:deepskyblue; */
}

#LandingPage-Container{
    /* 
    Row 1 - NavBar
    Row 2 - Logo
    Row 3 - Arrow Container
    Row 1-3: Video Background
    */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
}

.LandingPage-NavBar-Container{
    position: absolute;
    margin-top: 20px;
    left: 0;
    right: 0;
    display: grid;
    grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    /* background-color: rgba(53, 53, 53, 0.521); */
    /* font-size: 30px; */
    z-index: 1;
    /* font-size: 3vh; */
}

#LandingPage-Logo{
    grid-row: 1 /span 3;
    grid-column: 1 / span 1;
    height: auto;
    width: 35%;
    place-self: center;
    z-index: 0;
}

.Video-Container{
    grid-row: 1 / span 3;
    grid-column: 1 / span 1;
    z-index: 0;
}

#Video{
    width: 100%    !important;
    height: auto    !important;
    filter: brightness(80%);
    margin-bottom: -200px;
    
}

.NavBarLink{
    margin: 3px;
    place-self: center;
    font-size: 3vh;
}

#HomeButton{
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    /* background-color: aquamarine; */
}

#AboutButton{
    grid-row: 1 / span 1;
    grid-column: 3 / span 1;
    /* background-color: blue; */
}

#BlogButton{
    grid-row: 1 / span 1;
    grid-column: 4 / span 1;
    /* background-color: brown; */
}

#ContactButton{
    grid-row: 1 / span 1;
    grid-column: 5 / span 1;
    /* background-color: chocolate; */
}

#Arrow-Container{
    display: grid;
    grid-template-rows: 1fr .1fr;
    grid-template-columns: 1fr;
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
    place-self: center;
    /* background-color: blueviolet; */
    font-size: 30px;
    z-index: 0;
}

#Arrow{
    color: #FFFFFF;
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
    place-self: center;
    font-size: 80px;
}

#ArrowText{
    color: #FFFFFF;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    margin-bottom: -10px;
    place-self: center;
    font-size: 4vh;
}

#Profile-Container-ID{
    display: grid;
    background-color: rgb(243, 243, 243);
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
    grid-template-columns: .7fr 1fr;
    grid-template-rows: 1fr;
    /* background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%), url(../images/background.PNG); */
    background-repeat: no-repeat;
    /* background-size: 100% 100%; */
    z-index: 0;
    grid-gap: 10px;
    /* padding-bottom: -10em; */
}

#JayPicture{
    /* background-color: darkgoldenrod; */
    width: 90%    !important;
    height: auto    !important;
    margin: 2vw;
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    border-radius: 30px;
    justify-self: end;
    align-self: center;
}

#ProfileTitle{
    /* background-color: crimson; */
    justify-self: start;
    align-self: end;
    /* margin-top: 100px;
    margin-bottom: -30px; */
    font-size: 3vw;
    font-weight: 100;
}

#ProfileDescription-Container{
    /* background-color: aquamarine; */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, .25fr);
    grid-row: 1 / span 1;
    grid-column: 2 / span 1;
    align-self: center;
}

#ProfileDescription{
    /* background-color: aqua; */
    justify-self: start;
    align-self: start;
    font-size: 2.5vw;
    padding-right: 10vw;

}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 100,
  'GRAD' 0,
  'opsz' 48
}

#Projects-Title{
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
    /* position: absolute; */
    font-size: 3vw;
    font-weight: 100;
    /* margin-bottom: -0.1em; */
    background-color: #FFFFFF;
    z-index: 1;
    padding-top: 5%;
}

.Projects-Cards-Container{
    /* padding-top: 4em; */
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-row: 4 / span 1;
    grid-column: 1 / span 1;
    /* padding: 10%; */
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 5%;
    gap: 1em;
    column-gap: 2%;
    row-gap: 2%;
    /* background-color: #FFFFFF; */
    /* background-image: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(77,77,77,1) 99%); */
}
/* ============== CARD CSS ==============*/

#card1{
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
}

h1 {
    place-self: center;    
}

.Component{
    display: grid;
    place-items: center;
    /* margin-top: -10em; */
}

.Card-Container{
    align-self: center;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
    height: 100%;
    width: auto;
    text-decoration: none;
    filter: var(--shadow-dark);
    /* background-color: aqua; */
    /* margin-top: -5em; */
    
}

.Card-Image{
    align-self: end;
    /* align-content: stretch; */
    object-fit: cover;
    height: 100%;
    width: 100%;
    border-radius: var(--border-rad-sm) var(--border-rad-sm) 0px 0px;
    grid-row: 1 / span 1;
    /* margin-top: -5em; */
}

.Card-Title {
    font-size: var(--h2-sm);
}
/* ... */

